--- a/core/src/main/res/navigation/main_nav_graph.xml
+++ b/core/src/main/res/navigation/main_nav_graph.xml
@@ -8,8 +8,8 @@
         android:name="com.luteh.main.MainFragment"
         android:label="@string/main">
         <action
-            android:id="@+id/action_mainFragment_to_officialGenreFragment"
-            app:destination="@id/officialGenreFragment" />
+            android:id="@+id/action_mainFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
     </fragment>
     <fragment
         android:id="@+id/discoverFragment"
