--- a/features/main/src/main/res/layout/view_home_header.xml
+++ b/features/main/src/main/res/layout/view_home_header.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/spacing_medium__">
+    android:layout_height="wrap_content">
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintDimensionRatio="16:9"
-        tools:layout_height="0dp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:paddingTop="@dimen/spacing_medium__"
+        app:layout_constraintDimensionRatio="16:9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_indicator"
@@ -29,7 +29,7 @@
         android:id="@+id/v_loading"
         layout="@layout/common_loading"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@id/vp_header"
         app:layout_constraintTop_toTopOf="@id/vp_header" />
 
