--- a/features/iam/src/main/res/navigation/auth_nav_graph.xml
+++ b/features/iam/src/main/res/navigation/auth_nav_graph.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/auth_nav_graph"
     app:startDestination="@id/checkUsernameFragment">
 
     <fragment
         android:id="@+id/checkUsernameFragment"
-        android:name="com.luteh.movieapp.presentation.checkusername.CheckUsernameFragment"
-        android:label="CheckUsernameFragment">
+        android:name="com.luteh.iam.presentation.checkusername.CheckUsernameFragment"
+        android:label="CheckUsernameFragment"
+        tools:layout="@layout/fragment_check_username">
         <action
             android:id="@+id/action_checkUsernameFragment_to_keycloakFragment"
             app:destination="@id/keycloakFragment" />
     </fragment>
     <fragment
         android:id="@+id/keycloakFragment"
-        android:name="com.luteh.movieapp.presentation.keycloak.KeycloakFragment"
-        android:label="KeycloakFragment">
+        android:name="com.luteh.iam.presentation.keycloak.KeycloakFragment"
+        android:label="KeycloakFragment"
+        tools:layout="@layout/fragment_keycloak">
         <argument
             android:name="username"
             app:argType="string" />
